--- a/giangLab5/src/main/res/menu/activity_main_drawer.xml
+++ b/giangLab5/src/main/res/menu/activity_main_drawer.xml
@@ -8,13 +8,25 @@
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_menu_camera"
             android:title="@string/menu_home" />
+<!--        <item-->
+<!--            android:id="@+id/nav_gallery"-->
+<!--            android:icon="@drawable/ic_menu_gallery"-->
+<!--            android:title="@string/menu_gallery" />-->
+<!--        <item-->
+<!--            android:id="@+id/nav_slideshow"-->
+<!--            android:icon="@drawable/ic_menu_slideshow"-->
+<!--            android:title="@string/menu_slideshow" />-->
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/giang_nav_giang"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
+            android:title="@string/menu_giang" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/giang_nav_nguyen"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+            android:title="@string/menu_nguyen" />
+        <item
+            android:id="@+id/giang_nav_setting"
+            android:icon="@drawable/ic_menu_slideshow"
+            android:title="@string/menu_setting" />
     </group>
 </menu>
