--- a/giangLab5/src/main/res/navigation/mobile_navigation.xml
+++ b/giangLab5/src/main/res/navigation/mobile_navigation.xml
@@ -7,19 +7,35 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="giang.nguyen.s301033256.ui.home.HomeFragment"
+        android:name="giang.nguyen.s301033256.ui.home.GiHome"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/gi_home" />
+
+<!--    <fragment-->
+<!--        android:id="@+id/nav_gallery"-->
+<!--        android:name="giang.nguyen.s301033256.ui.gallery.GalleryFragment"-->
+<!--        android:label="@string/menu_gallery"-->
+<!--        tools:layout="@layout/fragment_gallery" />-->
+
+<!--    <fragment-->
+<!--        android:id="@+id/nav_slideshow"-->
+<!--        android:name="giang.nguyen.s301033256.ui.slideshow.SlideshowFragment"-->
+<!--        android:label="@string/menu_slideshow"-->
+<!--        tools:layout="@layout/fragment_slideshow" />-->
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="giang.nguyen.s301033256.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
-
+        android:id="@+id/giang_nav_giang"
+        android:name="giang.nguyen.s301033256.ui.giang.GiaDown"
+        android:label="@string/menu_giang"
+        tools:layout="@layout/gia_down" />
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="giang.nguyen.s301033256.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:id="@+id/giang_nav_nguyen"
+        android:name="giang.nguyen.s301033256.ui.nguyen.NgSrv"
+        android:label="@string/menu_nguyen"
+        tools:layout="@layout/ng_srv" />
+    <fragment
+        android:id="@+id/giang_nav_setting"
+        android:name="giang.nguyen.s301033256.ui.settings.NguSet"
+        android:label="@string/menu_setting"
+        tools:layout="@layout/ngu_set" />
 </navigation>
