--- a/giangLab5/src/main/res/layout/gia_down.xml
+++ b/giangLab5/src/main/res/layout/gia_down.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/fab_background_secondary"
     tools:context=".ui.giang.GiaDown">
 
     <TextView
