--- a/giangLab5/src/main/res/layout/gia_down.xml
+++ b/giangLab5/src/main/res/layout/gia_down.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.giang.GiaDown">
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/giangTextView3"
         style="@style/main_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
