--- a/giangLab5/src/main/res/values/dimens.xml
+++ b/giangLab5/src/main/res/values/dimens.xml
@@ -1,4 +1,10 @@
 <resources>
+    <!--    /**-->
+    <!--    * Giang Nguyen-->
+    <!--    * Student# 301033256-->
+    <!--    * Lab 5 - COPM304-->
+    <!--    * Professor Haki Sharifi-->
+    <!--    * */-->
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
