--- a/giangLab5/src/main/res/layout/ngu_set.xml
+++ b/giangLab5/src/main/res/layout/ngu_set.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--    /**-->
+<!--    * Giang Nguyen-->
+<!--    * Student# 301033256-->
+<!--    * Lab 5 - COPM304-->
+<!--    * Professor Haki Sharifi-->
+<!--    * */-->
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/purple_200"
+    android:background="@color/toolbar_color"
     tools:context=".ui.settings.NguSet">
 
     <RadioGroup
