--- a/giangLab5/src/main/res/menu/activity_main_drawer.xml
+++ b/giangLab5/src/main/res/menu/activity_main_drawer.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--    /**-->
+<!--    * Giang Nguyen-->
+<!--    * Student# 301033256-->
+<!--    * Lab 5 - COPM304-->
+<!--    * Professor Haki Sharifi-->
+<!--    * */-->
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
