--- a/giangLab5/src/main/res/values/colors.xml
+++ b/giangLab5/src/main/res/values/colors.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--    /**-->
+<!--    * Giang Nguyen-->
+<!--    * Student# 301033256-->
+<!--    * Lab 5 - COPM304-->
+<!--    * Professor Haki Sharifi-->
+<!--    * */-->
 <resources>
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
